--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,33 +1,5 @@
-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin: 20px 0;
-  font-size: 18px;
-  text-align: left;
-  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
-}
-
-th,
-td {
-  border: 1px solid #dddddd;
-  padding: 12px 15px;
-}
-
-th {
-  background-color: #f2f2f2;
-  color: #333;
-}
-
-tr:nth-child(even) {
-  background-color: #f9f9f9;
-}
-
-tr:hover {
-  background-color: #a9e7ab;
-}
-
-td {
-  color: #555;
+* {
+  font-family: 'Roboto', sans-serif;
 }
 
 button {
@@ -40,10 +12,11 @@ button {
   display: inline-block;
   font-size: 16px;
   margin: 20px 0;
+  width: 200px;
   cursor: pointer;
   transition: background-color 0.3s ease;
   border-radius: 5px;
-  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
 }
 
 button:hover {
